--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link href="
+https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css
+" rel="stylesheet">
     <title>Stay Healthy</title>
   </head>
   <body>
